[project]
name = "seattle-humus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "pylitterbot>=2024.2.3",
    "python-dotenv>=1.1.1",
    "httpx>=0.27.0",
    "openai>=1.42.0",
]

[project.scripts]
tacoma-hummus = "tacoma_hummus:main"
send-latest-weights = "send_latest_weights:main"
